Fix minor notebook issues

--- a/00a-extract_training_data.ipynb
+++ b/00a-extract_training_data.ipynb
@@ -6,21 +6,28 @@
    "id": "416d11e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:20.702256Z",
-     "iopub.status.busy": "2023-12-02T08:14:20.702100Z",
-     "iopub.status.idle": "2023-12-02T08:14:22.267000Z",
-     "shell.execute_reply": "2023-12-02T08:14:22.266274Z"
+     "iopub.execute_input": "2024-09-17T05:16:42.072226Z",
+     "iopub.status.busy": "2024-09-17T05:16:42.071907Z",
+     "iopub.status.idle": "2024-09-17T05:18:24.474023Z",
+     "shell.execute_reply": "2024-09-17T05:18:24.473326Z"
     },
     "papermill": {
-     "duration": 1.571774,
-     "end_time": "2023-12-02T08:14:22.268600",
+     "duration": 102.413869,
+     "end_time": "2024-09-17T05:18:24.478169",
      "exception": false,
-     "start_time": "2023-12-02T08:14:20.696826",
+     "start_time": "2024-09-17T05:16:42.064300",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -70,16 +77,16 @@
    "id": "24504d52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:22.279434Z",
-     "iopub.status.busy": "2023-12-02T08:14:22.279268Z",
-     "iopub.status.idle": "2023-12-02T08:14:22.282645Z",
-     "shell.execute_reply": "2023-12-02T08:14:22.282040Z"
+     "iopub.execute_input": "2024-09-17T05:18:24.486329Z",
+     "iopub.status.busy": "2024-09-17T05:18:24.486037Z",
+     "iopub.status.idle": "2024-09-17T05:18:24.489585Z",
+     "shell.execute_reply": "2024-09-17T05:18:24.488990Z"
     },
     "papermill": {
-     "duration": 0.010373,
-     "end_time": "2023-12-02T08:14:22.284144",
+     "duration": 0.009659,
+     "end_time": "2024-09-17T05:18:24.491273",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.273771",
+     "start_time": "2024-09-17T05:18:24.481614",
      "status": "completed"
     },
     "tags": []
@@ -101,10 +108,10 @@
    "id": "8070f64c",
    "metadata": {
     "papermill": {
-     "duration": 0.004484,
-     "end_time": "2023-12-02T08:14:22.293246",
+     "duration": 0.003327,
+     "end_time": "2024-09-17T05:18:24.498102",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.288762",
+     "start_time": "2024-09-17T05:18:24.494775",
      "status": "completed"
     },
     "tags": []
@@ -119,16 +126,16 @@
    "id": "8cc369d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:22.303465Z",
-     "iopub.status.busy": "2023-12-02T08:14:22.303311Z",
-     "iopub.status.idle": "2023-12-02T08:14:22.310078Z",
-     "shell.execute_reply": "2023-12-02T08:14:22.309472Z"
+     "iopub.execute_input": "2024-09-17T05:18:24.505926Z",
+     "iopub.status.busy": "2024-09-17T05:18:24.505664Z",
+     "iopub.status.idle": "2024-09-17T07:14:29.887221Z",
+     "shell.execute_reply": "2024-09-17T07:14:29.886633Z"
     },
     "papermill": {
-     "duration": 0.013652,
-     "end_time": "2023-12-02T08:14:22.311561",
+     "duration": 6965.387528,
+     "end_time": "2024-09-17T07:14:29.888957",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.297909",
+     "start_time": "2024-09-17T05:18:24.501429",
      "status": "completed"
     },
     "tags": []
@@ -190,10 +197,10 @@
    "id": "a45746ed",
    "metadata": {
     "papermill": {
-     "duration": 0.004514,
-     "end_time": "2023-12-02T08:14:22.320678",
+     "duration": 0.004932,
+     "end_time": "2024-09-17T07:14:29.899687",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.316164",
+     "start_time": "2024-09-17T07:14:29.894755",
      "status": "completed"
     },
     "tags": []
@@ -208,16 +215,16 @@
    "id": "3e1a295a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:22.330717Z",
-     "iopub.status.busy": "2023-12-02T08:14:22.330566Z",
-     "iopub.status.idle": "2023-12-02T08:33:22.921674Z",
-     "shell.execute_reply": "2023-12-02T08:33:22.920870Z"
+     "iopub.execute_input": "2024-09-17T07:14:29.908118Z",
+     "iopub.status.busy": "2024-09-17T07:14:29.907852Z",
+     "iopub.status.idle": "2024-09-17T07:33:32.237310Z",
+     "shell.execute_reply": "2024-09-17T07:33:32.236515Z"
     },
     "papermill": {
-     "duration": 1140.598526,
-     "end_time": "2023-12-02T08:33:22.923690",
+     "duration": 1142.337311,
+     "end_time": "2024-09-17T07:33:32.241094",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.325164",
+     "start_time": "2024-09-17T07:14:29.903783",
      "status": "completed"
     },
     "tags": []
@@ -280,10 +287,10 @@
    "id": "1d88d599",
    "metadata": {
     "papermill": {
-     "duration": 0.034247,
-     "end_time": "2023-12-02T08:33:22.983811",
+     "duration": 0.003742,
+     "end_time": "2024-09-17T07:33:32.255561",
      "exception": false,
-     "start_time": "2023-12-02T08:33:22.949564",
+     "start_time": "2024-09-17T07:33:32.251819",
      "status": "completed"
     },
     "tags": []
@@ -298,16 +305,16 @@
    "id": "6e7f3421",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:33:23.090130Z",
-     "iopub.status.busy": "2023-12-02T08:33:23.089866Z",
-     "iopub.status.idle": "2023-12-02T08:34:09.586116Z",
-     "shell.execute_reply": "2023-12-02T08:34:09.585063Z"
+     "iopub.execute_input": "2024-09-17T07:33:32.268404Z",
+     "iopub.status.busy": "2024-09-17T07:33:32.268116Z",
+     "iopub.status.idle": "2024-09-17T07:34:39.757645Z",
+     "shell.execute_reply": "2024-09-17T07:34:39.756776Z"
     },
     "papermill": {
-     "duration": 46.563862,
-     "end_time": "2023-12-02T08:34:09.588172",
+     "duration": 67.498799,
+     "end_time": "2024-09-17T07:34:39.759522",
      "exception": false,
-     "start_time": "2023-12-02T08:33:23.024310",
+     "start_time": "2024-09-17T07:33:32.260723",
      "status": "completed"
     },
     "tags": []
@@ -331,10 +338,10 @@
    "id": "5dd1c434",
    "metadata": {
     "papermill": {
-     "duration": 0.004533,
-     "end_time": "2023-12-02T08:34:09.597990",
+     "duration": 0.004771,
+     "end_time": "2024-09-17T07:34:39.770698",
      "exception": false,
-     "start_time": "2023-12-02T08:34:09.593457",
+     "start_time": "2024-09-17T07:34:39.765927",
      "status": "completed"
     },
     "tags": []
@@ -349,16 +356,16 @@
    "id": "f0eb6f15",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:34:09.631896Z",
-     "iopub.status.busy": "2023-12-02T08:34:09.631607Z",
-     "iopub.status.idle": "2023-12-02T08:52:14.258376Z",
-     "shell.execute_reply": "2023-12-02T08:52:14.257662Z"
+     "iopub.execute_input": "2024-09-17T07:34:39.781017Z",
+     "iopub.status.busy": "2024-09-17T07:34:39.780433Z",
+     "iopub.status.idle": "2024-09-17T07:47:58.641682Z",
+     "shell.execute_reply": "2024-09-17T07:47:58.640599Z"
     },
     "papermill": {
-     "duration": 1084.634481,
-     "end_time": "2023-12-02T08:52:14.260195",
+     "duration": 798.867733,
+     "end_time": "2024-09-17T07:47:58.643138",
      "exception": false,
-     "start_time": "2023-12-02T08:34:09.625714",
+     "start_time": "2024-09-17T07:34:39.775405",
      "status": "completed"
     },
     "tags": []
@@ -383,10 +390,10 @@
    "id": "168d3871",
    "metadata": {
     "papermill": {
-     "duration": 0.004613,
-     "end_time": "2023-12-02T08:52:14.270169",
+     "duration": 0.003513,
+     "end_time": "2024-09-17T07:47:58.652619",
      "exception": false,
-     "start_time": "2023-12-02T08:52:14.265556",
+     "start_time": "2024-09-17T07:47:58.649106",
      "status": "completed"
     },
     "tags": []
@@ -401,16 +408,16 @@
    "id": "a8fb758c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:52:14.280407Z",
-     "iopub.status.busy": "2023-12-02T08:52:14.280251Z",
-     "iopub.status.idle": "2023-12-02T08:52:51.611164Z",
-     "shell.execute_reply": "2023-12-02T08:52:51.610439Z"
+     "iopub.execute_input": "2024-09-17T07:47:58.664608Z",
+     "iopub.status.busy": "2024-09-17T07:47:58.664324Z",
+     "iopub.status.idle": "2024-09-17T07:49:23.705950Z",
+     "shell.execute_reply": "2024-09-17T07:49:23.705220Z"
     },
     "papermill": {
-     "duration": 37.338329,
-     "end_time": "2023-12-02T08:52:51.613056",
+     "duration": 85.049281,
+     "end_time": "2024-09-17T07:49:23.708167",
      "exception": false,
-     "start_time": "2023-12-02T08:52:14.274727",
+     "start_time": "2024-09-17T07:47:58.658886",
      "status": "completed"
     },
     "tags": []
@@ -438,10 +445,10 @@
    "id": "ad8e6307",
    "metadata": {
     "papermill": {
-     "duration": 0.004683,
-     "end_time": "2023-12-02T08:52:51.622973",
+     "duration": 0.003723,
+     "end_time": "2024-09-17T07:49:23.716383",
      "exception": false,
-     "start_time": "2023-12-02T08:52:51.618290",
+     "start_time": "2024-09-17T07:49:23.712660",
      "status": "completed"
     },
     "tags": []
@@ -456,16 +463,16 @@
    "id": "3bf8e4fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:52:51.633574Z",
-     "iopub.status.busy": "2023-12-02T08:52:51.633285Z",
-     "iopub.status.idle": "2023-12-02T08:52:56.569344Z",
-     "shell.execute_reply": "2023-12-02T08:52:56.568505Z"
+     "iopub.execute_input": "2024-09-17T07:49:23.724272Z",
+     "iopub.status.busy": "2024-09-17T07:49:23.724015Z",
+     "iopub.status.idle": "2024-09-17T07:49:30.959804Z",
+     "shell.execute_reply": "2024-09-17T07:49:30.959051Z"
     },
     "papermill": {
-     "duration": 4.943995,
-     "end_time": "2023-12-02T08:52:56.571574",
+     "duration": 7.241905,
+     "end_time": "2024-09-17T07:49:30.961782",
      "exception": false,
-     "start_time": "2023-12-02T08:52:51.627579",
+     "start_time": "2024-09-17T07:49:23.719877",
      "status": "completed"
     },
     "tags": []
@@ -487,10 +494,10 @@
    "id": "f23026ea",
    "metadata": {
     "papermill": {
-     "duration": 0.00507,
-     "end_time": "2023-12-02T08:52:56.582520",
+     "duration": 0.003378,
+     "end_time": "2024-09-17T07:49:30.968835",
      "exception": false,
-     "start_time": "2023-12-02T08:52:56.577450",
+     "start_time": "2024-09-17T07:49:30.965457",
      "status": "completed"
     },
     "tags": []
@@ -505,16 +512,16 @@
    "id": "a82404e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:52:56.594007Z",
-     "iopub.status.busy": "2023-12-02T08:52:56.593850Z",
-     "iopub.status.idle": "2023-12-02T08:54:14.355366Z",
-     "shell.execute_reply": "2023-12-02T08:54:14.354736Z"
+     "iopub.execute_input": "2024-09-17T07:49:30.979091Z",
+     "iopub.status.busy": "2024-09-17T07:49:30.978810Z",
+     "iopub.status.idle": "2024-09-17T07:50:32.448006Z",
+     "shell.execute_reply": "2024-09-17T07:50:32.447236Z"
     },
     "papermill": {
-     "duration": 77.769646,
-     "end_time": "2023-12-02T08:54:14.357271",
+     "duration": 61.47749,
+     "end_time": "2024-09-17T07:50:32.450200",
      "exception": false,
-     "start_time": "2023-12-02T08:52:56.587625",
+     "start_time": "2024-09-17T07:49:30.972710",
      "status": "completed"
     },
     "tags": []
@@ -539,10 +546,10 @@
    "id": "40319403",
    "metadata": {
     "papermill": {
-     "duration": 0.004696,
-     "end_time": "2023-12-02T08:54:14.367428",
+     "duration": 0.004053,
+     "end_time": "2024-09-17T07:50:32.458552",
      "exception": false,
-     "start_time": "2023-12-02T08:54:14.362732",
+     "start_time": "2024-09-17T07:50:32.454499",
      "status": "completed"
     },
     "tags": []
@@ -557,16 +564,16 @@
    "id": "47f23804",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:14.377901Z",
-     "iopub.status.busy": "2023-12-02T08:54:14.377752Z",
-     "iopub.status.idle": "2023-12-02T08:54:53.735791Z",
-     "shell.execute_reply": "2023-12-02T08:54:53.734969Z"
+     "iopub.execute_input": "2024-09-17T07:50:32.467686Z",
+     "iopub.status.busy": "2024-09-17T07:50:32.467250Z",
+     "iopub.status.idle": "2024-09-17T07:51:09.741228Z",
+     "shell.execute_reply": "2024-09-17T07:51:09.740386Z"
     },
     "papermill": {
-     "duration": 39.36577,
-     "end_time": "2023-12-02T08:54:53.737945",
+     "duration": 37.280662,
+     "end_time": "2024-09-17T07:51:09.743207",
      "exception": false,
-     "start_time": "2023-12-02T08:54:14.372175",
+     "start_time": "2024-09-17T07:50:32.462545",
      "status": "completed"
     },
     "tags": []
@@ -587,10 +594,10 @@
    "id": "8b973e4e",
    "metadata": {
     "papermill": {
-     "duration": 0.005668,
-     "end_time": "2023-12-02T08:54:53.749448",
+     "duration": 0.003768,
+     "end_time": "2024-09-17T07:51:09.751167",
      "exception": false,
-     "start_time": "2023-12-02T08:54:53.743780",
+     "start_time": "2024-09-17T07:51:09.747399",
      "status": "completed"
     },
     "tags": []
@@ -605,16 +612,16 @@
    "id": "90f34d8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:53.761308Z",
-     "iopub.status.busy": "2023-12-02T08:54:53.761103Z",
-     "iopub.status.idle": "2023-12-02T08:54:53.897166Z",
-     "shell.execute_reply": "2023-12-02T08:54:53.896388Z"
+     "iopub.execute_input": "2024-09-17T07:51:09.758933Z",
+     "iopub.status.busy": "2024-09-17T07:51:09.758682Z",
+     "iopub.status.idle": "2024-09-17T07:51:09.854966Z",
+     "shell.execute_reply": "2024-09-17T07:51:09.854390Z"
     },
     "papermill": {
-     "duration": 0.144157,
-     "end_time": "2023-12-02T08:54:53.898838",
+     "duration": 0.102091,
+     "end_time": "2024-09-17T07:51:09.856736",
      "exception": false,
-     "start_time": "2023-12-02T08:54:53.754681",
+     "start_time": "2024-09-17T07:51:09.754645",
      "status": "completed"
     },
     "tags": []
@@ -639,16 +646,16 @@
    "id": "42c75518",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:53.910049Z",
-     "iopub.status.busy": "2023-12-02T08:54:53.909883Z",
-     "iopub.status.idle": "2023-12-02T08:54:55.536714Z",
-     "shell.execute_reply": "2023-12-02T08:54:55.536039Z"
+     "iopub.execute_input": "2024-09-17T07:51:09.864999Z",
+     "iopub.status.busy": "2024-09-17T07:51:09.864582Z",
+     "iopub.status.idle": "2024-09-17T07:51:12.051102Z",
+     "shell.execute_reply": "2024-09-17T07:51:12.050565Z"
     },
     "papermill": {
-     "duration": 1.634336,
-     "end_time": "2023-12-02T08:54:55.538366",
+     "duration": 2.1934,
+     "end_time": "2024-09-17T07:51:12.053835",
      "exception": false,
-     "start_time": "2023-12-02T08:54:53.904030",
+     "start_time": "2024-09-17T07:51:09.860435",
      "status": "completed"
     },
     "tags": []
@@ -688,10 +695,10 @@
    "id": "da5291f4",
    "metadata": {
     "papermill": {
-     "duration": 0.00514,
-     "end_time": "2023-12-02T08:54:55.549105",
+     "duration": 0.004816,
+     "end_time": "2024-09-17T07:51:12.062255",
      "exception": false,
-     "start_time": "2023-12-02T08:54:55.543965",
+     "start_time": "2024-09-17T07:51:12.057439",
      "status": "completed"
     },
     "tags": []
@@ -716,18 +723,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.5"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2438.447061,
-   "end_time": "2023-12-02T08:54:58.273441",
+   "duration": 9275.354132,
+   "end_time": "2024-09-17T07:51:14.895706",
    "environment_variables": {},
    "exception": null,
    "input_path": "00a-extract_training_data.ipynb",
-   "output_path": "00a-extract_training_data_output.ipynb",
+   "output_path": "00a-extract_training_data.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T08:14:19.826380",
+   "start_time": "2024-09-17T05:16:39.541574",
    "version": "2.4.0"
   }
  },
