--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -6,16 +6,16 @@
    "id": "7064cd0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:59.018924Z",
-     "iopub.status.busy": "2023-12-02T08:54:59.018220Z",
-     "iopub.status.idle": "2023-12-02T08:55:00.749760Z",
-     "shell.execute_reply": "2023-12-02T08:55:00.749028Z"
+     "iopub.execute_input": "2024-09-17T07:51:45.312719Z",
+     "iopub.status.busy": "2024-09-17T07:51:45.312448Z",
+     "iopub.status.idle": "2024-09-17T07:51:49.084051Z",
+     "shell.execute_reply": "2024-09-17T07:51:49.083477Z"
     },
     "papermill": {
-     "duration": 1.737806,
-     "end_time": "2023-12-02T08:55:00.751341",
+     "duration": 3.778893,
+     "end_time": "2024-09-17T07:51:49.085786",
      "exception": false,
-     "start_time": "2023-12-02T08:54:59.013535",
+     "start_time": "2024-09-17T07:51:45.306893",
      "status": "completed"
     },
     "tags": []
@@ -64,16 +64,16 @@
    "id": "b9df0e9a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:55:00.759856Z",
-     "iopub.status.busy": "2023-12-02T08:55:00.759702Z",
-     "iopub.status.idle": "2023-12-02T08:55:00.762961Z",
-     "shell.execute_reply": "2023-12-02T08:55:00.762328Z"
+     "iopub.execute_input": "2024-09-17T07:51:49.092716Z",
+     "iopub.status.busy": "2024-09-17T07:51:49.092466Z",
+     "iopub.status.idle": "2024-09-17T07:51:49.095732Z",
+     "shell.execute_reply": "2024-09-17T07:51:49.094992Z"
     },
     "papermill": {
-     "duration": 0.00914,
-     "end_time": "2023-12-02T08:55:00.764457",
+     "duration": 0.008339,
+     "end_time": "2024-09-17T07:51:49.097284",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.755317",
+     "start_time": "2024-09-17T07:51:49.088945",
      "status": "completed"
     },
     "tags": []
@@ -93,16 +93,16 @@
    "id": "77b83aff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:55:00.772749Z",
-     "iopub.status.busy": "2023-12-02T08:55:00.772592Z",
-     "iopub.status.idle": "2023-12-02T08:55:00.778809Z",
-     "shell.execute_reply": "2023-12-02T08:55:00.778166Z"
+     "iopub.execute_input": "2024-09-17T07:51:49.103481Z",
+     "iopub.status.busy": "2024-09-17T07:51:49.103256Z",
+     "iopub.status.idle": "2024-09-17T07:51:49.109576Z",
+     "shell.execute_reply": "2024-09-17T07:51:49.109157Z"
     },
     "papermill": {
-     "duration": 0.012418,
-     "end_time": "2023-12-02T08:55:00.780440",
+     "duration": 0.011105,
+     "end_time": "2024-09-17T07:51:49.111020",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.768022",
+     "start_time": "2024-09-17T07:51:49.099915",
      "status": "completed"
     },
     "tags": []
@@ -158,10 +158,10 @@
    "id": "eb746f63",
    "metadata": {
     "papermill": {
-     "duration": 0.003561,
-     "end_time": "2023-12-02T08:55:00.787648",
+     "duration": 0.002364,
+     "end_time": "2024-09-17T07:51:49.115708",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.784087",
+     "start_time": "2024-09-17T07:51:49.113344",
      "status": "completed"
     },
     "tags": []
@@ -176,16 +176,16 @@
    "id": "c7415048",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:55:00.795748Z",
-     "iopub.status.busy": "2023-12-02T08:55:00.795605Z",
-     "iopub.status.idle": "2023-12-02T09:12:43.645060Z",
-     "shell.execute_reply": "2023-12-02T09:12:43.644324Z"
+     "iopub.execute_input": "2024-09-17T07:51:49.123943Z",
+     "iopub.status.busy": "2024-09-17T07:51:49.123640Z",
+     "iopub.status.idle": "2024-09-17T08:09:25.967860Z",
+     "shell.execute_reply": "2024-09-17T08:09:25.966969Z"
     },
     "papermill": {
-     "duration": 1062.855742,
-     "end_time": "2023-12-02T09:12:43.646960",
+     "duration": 1056.85019,
+     "end_time": "2024-09-17T08:09:25.969827",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.791218",
+     "start_time": "2024-09-17T07:51:49.119637",
      "status": "completed"
     },
     "tags": []
@@ -209,16 +209,16 @@
    "id": "42851c3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:12:43.657008Z",
-     "iopub.status.busy": "2023-12-02T09:12:43.656835Z",
-     "iopub.status.idle": "2023-12-02T09:12:43.659624Z",
-     "shell.execute_reply": "2023-12-02T09:12:43.659235Z"
+     "iopub.execute_input": "2024-09-17T08:09:25.979215Z",
+     "iopub.status.busy": "2024-09-17T08:09:25.978926Z",
+     "iopub.status.idle": "2024-09-17T08:09:25.982067Z",
+     "shell.execute_reply": "2024-09-17T08:09:25.981540Z"
     },
     "papermill": {
-     "duration": 0.009109,
-     "end_time": "2023-12-02T09:12:43.661101",
+     "duration": 0.00916,
+     "end_time": "2024-09-17T08:09:25.983704",
      "exception": false,
-     "start_time": "2023-12-02T09:12:43.651992",
+     "start_time": "2024-09-17T08:09:25.974544",
      "status": "completed"
     },
     "tags": []
@@ -235,10 +235,10 @@
    "id": "0e2ba866",
    "metadata": {
     "papermill": {
-     "duration": 0.003671,
-     "end_time": "2023-12-02T09:12:43.668541",
+     "duration": 0.002716,
+     "end_time": "2024-09-17T08:09:25.989098",
      "exception": false,
-     "start_time": "2023-12-02T09:12:43.664870",
+     "start_time": "2024-09-17T08:09:25.986382",
      "status": "completed"
     },
     "tags": []
@@ -253,16 +253,16 @@
    "id": "7c03c5a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:12:43.677171Z",
-     "iopub.status.busy": "2023-12-02T09:12:43.677023Z",
-     "iopub.status.idle": "2023-12-02T09:13:12.725775Z",
-     "shell.execute_reply": "2023-12-02T09:13:12.725024Z"
+     "iopub.execute_input": "2024-09-17T08:09:25.996243Z",
+     "iopub.status.busy": "2024-09-17T08:09:25.996017Z",
+     "iopub.status.idle": "2024-09-17T08:09:50.675665Z",
+     "shell.execute_reply": "2024-09-17T08:09:50.674832Z"
     },
     "papermill": {
-     "duration": 29.054634,
-     "end_time": "2023-12-02T09:13:12.727157",
+     "duration": 24.685947,
+     "end_time": "2024-09-17T08:09:50.677700",
      "exception": false,
-     "start_time": "2023-12-02T09:12:43.672523",
+     "start_time": "2024-09-17T08:09:25.991753",
      "status": "completed"
     },
     "tags": []
@@ -285,10 +285,10 @@
    "id": "cafffa14",
    "metadata": {
     "papermill": {
-     "duration": 0.002106,
-     "end_time": "2023-12-02T09:13:12.731828",
+     "duration": 0.003344,
+     "end_time": "2024-09-17T08:09:50.685701",
      "exception": false,
-     "start_time": "2023-12-02T09:13:12.729722",
+     "start_time": "2024-09-17T08:09:50.682357",
      "status": "completed"
     },
     "tags": []
@@ -303,16 +303,16 @@
    "id": "fbadac30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:13:12.736987Z",
-     "iopub.status.busy": "2023-12-02T09:13:12.736810Z",
-     "iopub.status.idle": "2023-12-02T09:18:04.210528Z",
-     "shell.execute_reply": "2023-12-02T09:18:04.209751Z"
+     "iopub.execute_input": "2024-09-17T08:09:50.693383Z",
+     "iopub.status.busy": "2024-09-17T08:09:50.693101Z",
+     "iopub.status.idle": "2024-09-17T08:16:10.574416Z",
+     "shell.execute_reply": "2024-09-17T08:16:10.573738Z"
     },
     "papermill": {
-     "duration": 291.478773,
-     "end_time": "2023-12-02T09:18:04.212655",
+     "duration": 379.887753,
+     "end_time": "2024-09-17T08:16:10.576545",
      "exception": false,
-     "start_time": "2023-12-02T09:13:12.733882",
+     "start_time": "2024-09-17T08:09:50.688792",
      "status": "completed"
     },
     "tags": []
@@ -334,10 +334,10 @@
    "id": "6c7067fe",
    "metadata": {
     "papermill": {
-     "duration": 0.004184,
-     "end_time": "2023-12-02T09:18:04.221616",
+     "duration": 0.003131,
+     "end_time": "2024-09-17T08:16:10.585461",
      "exception": false,
-     "start_time": "2023-12-02T09:18:04.217432",
+     "start_time": "2024-09-17T08:16:10.582330",
      "status": "completed"
     },
     "tags": []
@@ -352,16 +352,16 @@
    "id": "317048a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:18:04.230942Z",
-     "iopub.status.busy": "2023-12-02T09:18:04.230749Z",
-     "iopub.status.idle": "2023-12-02T09:30:38.532920Z",
-     "shell.execute_reply": "2023-12-02T09:30:38.532101Z"
+     "iopub.execute_input": "2024-09-17T08:16:10.591830Z",
+     "iopub.status.busy": "2024-09-17T08:16:10.591580Z",
+     "iopub.status.idle": "2024-09-17T08:29:00.888216Z",
+     "shell.execute_reply": "2024-09-17T08:29:00.887614Z"
     },
     "papermill": {
-     "duration": 754.309365,
-     "end_time": "2023-12-02T09:30:38.535063",
+     "duration": 770.302123,
+     "end_time": "2024-09-17T08:29:00.890277",
      "exception": false,
-     "start_time": "2023-12-02T09:18:04.225698",
+     "start_time": "2024-09-17T08:16:10.588154",
      "status": "completed"
     },
     "tags": []
@@ -386,10 +386,10 @@
    "id": "3067ae47",
    "metadata": {
     "papermill": {
-     "duration": 0.004145,
-     "end_time": "2023-12-02T09:30:38.543926",
+     "duration": 0.003271,
+     "end_time": "2024-09-17T08:29:00.896733",
      "exception": false,
-     "start_time": "2023-12-02T09:30:38.539781",
+     "start_time": "2024-09-17T08:29:00.893462",
      "status": "completed"
     },
     "tags": []
@@ -404,16 +404,16 @@
    "id": "a90d7da4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:30:38.553025Z",
-     "iopub.status.busy": "2023-12-02T09:30:38.552837Z",
-     "iopub.status.idle": "2023-12-02T09:46:59.568305Z",
-     "shell.execute_reply": "2023-12-02T09:46:59.567533Z"
+     "iopub.execute_input": "2024-09-17T08:29:00.903337Z",
+     "iopub.status.busy": "2024-09-17T08:29:00.903084Z",
+     "iopub.status.idle": "2024-09-17T08:40:00.797446Z",
+     "shell.execute_reply": "2024-09-17T08:40:00.796756Z"
     },
     "papermill": {
-     "duration": 981.022614,
-     "end_time": "2023-12-02T09:46:59.570586",
+     "duration": 659.900042,
+     "end_time": "2024-09-17T08:40:00.799540",
      "exception": false,
-     "start_time": "2023-12-02T09:30:38.547972",
+     "start_time": "2024-09-17T08:29:00.899498",
      "status": "completed"
     },
     "tags": []
@@ -434,10 +434,10 @@
    "id": "48e28940",
    "metadata": {
     "papermill": {
-     "duration": 0.004201,
-     "end_time": "2023-12-02T09:46:59.579820",
+     "duration": 0.003147,
+     "end_time": "2024-09-17T08:40:00.806302",
      "exception": false,
-     "start_time": "2023-12-02T09:46:59.575619",
+     "start_time": "2024-09-17T08:40:00.803155",
      "status": "completed"
     },
     "tags": []
@@ -452,16 +452,16 @@
    "id": "333c91a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:46:59.589469Z",
-     "iopub.status.busy": "2023-12-02T09:46:59.589290Z",
-     "iopub.status.idle": "2023-12-02T09:49:19.329227Z",
-     "shell.execute_reply": "2023-12-02T09:49:19.328463Z"
+     "iopub.execute_input": "2024-09-17T08:40:00.812901Z",
+     "iopub.status.busy": "2024-09-17T08:40:00.812648Z",
+     "iopub.status.idle": "2024-09-17T08:43:08.755424Z",
+     "shell.execute_reply": "2024-09-17T08:43:08.754755Z"
     },
     "papermill": {
-     "duration": 139.747135,
-     "end_time": "2023-12-02T09:49:19.331271",
+     "duration": 187.948001,
+     "end_time": "2024-09-17T08:43:08.757188",
      "exception": false,
-     "start_time": "2023-12-02T09:46:59.584136",
+     "start_time": "2024-09-17T08:40:00.809187",
      "status": "completed"
     },
     "tags": []
@@ -477,10 +477,10 @@
    "id": "b51b394a",
    "metadata": {
     "papermill": {
-     "duration": 0.004196,
-     "end_time": "2023-12-02T09:49:19.351444",
+     "duration": 0.002597,
+     "end_time": "2024-09-17T08:43:08.762579",
      "exception": false,
-     "start_time": "2023-12-02T09:49:19.347248",
+     "start_time": "2024-09-17T08:43:08.759982",
      "status": "completed"
     },
     "tags": []
@@ -505,18 +505,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.5"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 3264.385669,
-   "end_time": "2023-12-02T09:49:22.677949",
+   "duration": 3088.007103,
+   "end_time": "2024-09-17T08:43:11.893420",
    "environment_variables": {},
    "exception": null,
    "input_path": "00b-extract_grid_data.ipynb",
-   "output_path": "00b-extract_grid_data_output.ipynb",
+   "output_path": "00b-extract_grid_data.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T08:54:58.292280",
+   "start_time": "2024-09-17T07:51:43.886317",
    "version": "2.4.0"
   }
  },
