--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -6,10 +6,10 @@
    "id": "f09ddee5",
    "metadata": {
     "papermill": {
-     "duration": 0.003377,
-     "end_time": "2023-12-02T10:11:03.117494",
+     "duration": 0.003728,
+     "end_time": "2024-09-18T03:18:55.138116",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.114117",
+     "start_time": "2024-09-18T03:18:55.134388",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "ec9f49db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:03.124123Z",
-     "iopub.status.busy": "2023-12-02T10:11:03.123975Z",
-     "iopub.status.idle": "2023-12-02T10:11:03.129242Z",
-     "shell.execute_reply": "2023-12-02T10:11:03.128816Z"
+     "iopub.execute_input": "2024-09-18T03:18:55.144797Z",
+     "iopub.status.busy": "2024-09-18T03:18:55.144476Z",
+     "iopub.status.idle": "2024-09-18T03:18:55.148910Z",
+     "shell.execute_reply": "2024-09-18T03:18:55.148173Z"
     },
     "papermill": {
-     "duration": 0.010213,
-     "end_time": "2023-12-02T10:11:03.130568",
+     "duration": 0.009943,
+     "end_time": "2024-09-18T03:18:55.150854",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.120355",
+     "start_time": "2024-09-18T03:18:55.140911",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "8678b7a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:03.135915Z",
-     "iopub.status.busy": "2023-12-02T10:11:03.135772Z",
-     "iopub.status.idle": "2023-12-02T10:11:04.990836Z",
-     "shell.execute_reply": "2023-12-02T10:11:04.990361Z"
+     "iopub.execute_input": "2024-09-18T03:18:55.156557Z",
+     "iopub.status.busy": "2024-09-18T03:18:55.156304Z",
+     "iopub.status.idle": "2024-09-18T03:18:58.870015Z",
+     "shell.execute_reply": "2024-09-18T03:18:58.869311Z"
     },
     "papermill": {
-     "duration": 1.859901,
-     "end_time": "2023-12-02T10:11:04.992716",
+     "duration": 3.718763,
+     "end_time": "2024-09-18T03:18:58.871957",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.132815",
+     "start_time": "2024-09-18T03:18:55.153194",
      "status": "completed"
     },
     "tags": []
@@ -86,16 +86,16 @@
    "id": "53cac4c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:04.999606Z",
-     "iopub.status.busy": "2023-12-02T10:11:04.999232Z",
-     "iopub.status.idle": "2023-12-02T10:11:05.005093Z",
-     "shell.execute_reply": "2023-12-02T10:11:05.004699Z"
+     "iopub.execute_input": "2024-09-18T03:18:58.876718Z",
+     "iopub.status.busy": "2024-09-18T03:18:58.876293Z",
+     "iopub.status.idle": "2024-09-18T03:18:58.881820Z",
+     "shell.execute_reply": "2024-09-18T03:18:58.881404Z"
     },
     "papermill": {
-     "duration": 0.010698,
-     "end_time": "2023-12-02T10:11:05.006447",
+     "duration": 0.009311,
+     "end_time": "2024-09-18T03:18:58.883201",
      "exception": false,
-     "start_time": "2023-12-02T10:11:04.995749",
+     "start_time": "2024-09-18T03:18:58.873890",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x7f4240053e10>"
+       "<dask.config.set at 0x106ab6c30>"
       ]
      },
      "execution_count": 3,
@@ -123,10 +123,10 @@
    "id": "0b2519c9",
    "metadata": {
     "papermill": {
-     "duration": 0.002744,
-     "end_time": "2023-12-02T10:11:05.012078",
+     "duration": 0.00171,
+     "end_time": "2024-09-18T03:18:58.886792",
      "exception": false,
-     "start_time": "2023-12-02T10:11:05.009334",
+     "start_time": "2024-09-18T03:18:58.885082",
      "status": "completed"
     },
     "tags": []
@@ -141,21 +141,36 @@
    "id": "5cfb3705",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:05.018716Z",
-     "iopub.status.busy": "2023-12-02T10:11:05.018570Z",
-     "iopub.status.idle": "2023-12-02T10:11:15.524617Z",
-     "shell.execute_reply": "2023-12-02T10:11:15.523927Z"
+     "iopub.execute_input": "2024-09-18T03:18:58.890794Z",
+     "iopub.status.busy": "2024-09-18T03:18:58.890610Z",
+     "iopub.status.idle": "2024-09-18T03:19:28.830560Z",
+     "shell.execute_reply": "2024-09-18T03:19:28.829754Z"
     },
     "papermill": {
-     "duration": 10.511404,
-     "end_time": "2023-12-02T10:11:15.526436",
+     "duration": 29.944268,
+     "end_time": "2024-09-18T03:19:28.832663",
      "exception": false,
-     "start_time": "2023-12-02T10:11:05.015032",
+     "start_time": "2024-09-18T03:18:58.888395",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chris/.miniforge3/envs/datamining-test/lib/python3.12/site-packages/dask/dataframe/io/csv.py:555: UserWarning: Warning zip compression does not support breaking apart files\n",
+      "Please ensure that each individual file can fit in memory and\n",
+      "use the keyword ``blocksize=None to remove this message``\n",
+      "Setting ``blocksize=None``\n",
+      "/Users/chris/.miniforge3/envs/datamining-test/lib/python3.12/site-packages/dask/dataframe/io/csv.py:555: UserWarning: Warning zip compression does not support breaking apart files\n",
+      "Please ensure that each individual file can fit in memory and\n",
+      "use the keyword ``blocksize=None to remove this message``\n",
+      "Setting ``blocksize=None``\n"
+     ]
+    }
+   ],
    "source": [
     "if use_extracted_data:\n",
     "    data_dir = \"extracted_data\"\n",
@@ -163,6 +178,8 @@
     "    data_dir = \"prepared_data\"\n",
     "    check_prepared_data(data_dir, verbose=True)\n",
     "data_filename = os.path.join(data_dir, \"grid_data.csv\")\n",
+    "if not os.path.isfile(data_filename):\n",
+    "    data_filename += \".zip\"\n",
     "point_data = dd.read_csv(data_filename)\n",
     "\n",
     "df_out = point_data[[\"lon\", \"lat\", \"age (Ma)\"]].compute()\n"
@@ -174,10 +191,10 @@
    "id": "9529131c",
    "metadata": {
     "papermill": {
-     "duration": 0.003072,
-     "end_time": "2023-12-02T10:11:15.533135",
+     "duration": 0.002604,
+     "end_time": "2024-09-18T03:19:28.838294",
      "exception": false,
-     "start_time": "2023-12-02T10:11:15.530063",
+     "start_time": "2024-09-18T03:19:28.835690",
      "status": "completed"
     },
     "tags": []
@@ -192,16 +209,16 @@
    "id": "196a6d7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:15.540230Z",
-     "iopub.status.busy": "2023-12-02T10:11:15.540078Z",
-     "iopub.status.idle": "2023-12-02T10:14:09.334063Z",
-     "shell.execute_reply": "2023-12-02T10:14:09.333217Z"
+     "iopub.execute_input": "2024-09-18T03:19:28.844694Z",
+     "iopub.status.busy": "2024-09-18T03:19:28.844411Z",
+     "iopub.status.idle": "2024-09-18T03:31:06.914652Z",
+     "shell.execute_reply": "2024-09-18T03:31:06.914145Z"
     },
     "papermill": {
-     "duration": 173.799602,
-     "end_time": "2023-12-02T10:14:09.335773",
+     "duration": 698.077345,
+     "end_time": "2024-09-18T03:31:06.918286",
      "exception": false,
-     "start_time": "2023-12-02T10:11:15.536171",
+     "start_time": "2024-09-18T03:19:28.840941",
      "status": "completed"
     },
     "tags": []
@@ -215,10 +232,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chris/.miniforge3/envs/datamining-test/lib/python3.12/site-packages/dask/dataframe/io/csv.py:555: UserWarning: Warning zip compression does not support breaking apart files\n",
+      "Please ensure that each individual file can fit in memory and\n",
+      "use the keyword ``blocksize=None to remove this message``\n",
+      "Setting ``blocksize=None``\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:02:31.636297)\n"
+      "Done! (duration: 0:09:54.475927)\n"
      ]
     },
     {
@@ -229,10 +256,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chris/.miniforge3/envs/datamining-test/lib/python3.12/site-packages/dask/dataframe/io/csv.py:555: UserWarning: Warning zip compression does not support breaking apart files\n",
+      "Please ensure that each individual file can fit in memory and\n",
+      "use the keyword ``blocksize=None to remove this message``\n",
+      "Setting ``blocksize=None``\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:00:22.149152)\n"
+      "Done! (duration: 0:01:43.586564)\n"
      ]
     }
    ],
@@ -280,10 +317,10 @@
    "id": "dfce6d61",
    "metadata": {
     "papermill": {
-     "duration": 0.003316,
-     "end_time": "2023-12-02T10:14:09.343193",
+     "duration": 0.002382,
+     "end_time": "2024-09-18T03:31:06.923243",
      "exception": false,
-     "start_time": "2023-12-02T10:14:09.339877",
+     "start_time": "2024-09-18T03:31:06.920861",
      "status": "completed"
     },
     "tags": []
@@ -298,16 +335,16 @@
    "id": "1e1b3c0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:14:09.351393Z",
-     "iopub.status.busy": "2023-12-02T10:14:09.350900Z",
-     "iopub.status.idle": "2023-12-02T10:23:06.041180Z",
-     "shell.execute_reply": "2023-12-02T10:23:06.040350Z"
+     "iopub.execute_input": "2024-09-18T03:31:06.928991Z",
+     "iopub.status.busy": "2024-09-18T03:31:06.928754Z",
+     "iopub.status.idle": "2024-09-18T04:00:39.912719Z",
+     "shell.execute_reply": "2024-09-18T04:00:39.912099Z"
     },
     "papermill": {
-     "duration": 536.699273,
-     "end_time": "2023-12-02T10:23:06.045768",
+     "duration": 1772.990265,
+     "end_time": "2024-09-18T04:00:39.915861",
      "exception": false,
-     "start_time": "2023-12-02T10:14:09.346495",
+     "start_time": "2024-09-18T03:31:06.925596",
      "status": "completed"
     },
     "tags": []
@@ -376,10 +413,10 @@
    "id": "269b4994",
    "metadata": {
     "papermill": {
-     "duration": 0.003581,
-     "end_time": "2023-12-02T10:23:06.053107",
+     "duration": 0.002514,
+     "end_time": "2024-09-18T04:00:39.921173",
      "exception": false,
-     "start_time": "2023-12-02T10:23:06.049526",
+     "start_time": "2024-09-18T04:00:39.918659",
      "status": "completed"
     },
     "tags": []
@@ -404,18 +441,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.5"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 726.461321,
-   "end_time": "2023-12-02T10:23:08.775783",
+   "duration": 2508.849884,
+   "end_time": "2024-09-18T04:00:42.749534",
    "environment_variables": {},
    "exception": null,
    "input_path": "02-create_probability_maps.ipynb",
-   "output_path": "02-create_probability_maps_output.ipynb",
+   "output_path": "02-create_probability_maps.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T10:11:02.314462",
+   "start_time": "2024-09-18T03:18:53.899650",
    "version": "2.4.0"
   }
  },
